added table 1 & more to social learning in intro and analysis plan

--- a/Files/rrs/mi.bib
+++ b/Files/rrs/mi.bib
@@ -1,3 +1,35 @@
+@article{lihoreau2011local,
+  title={Local enhancement promotes cockroach feeding aggregations},
+  author={Lihoreau, Mathieu and Rivault, Colette},
+  journal={PloS one},
+  volume={6},
+  number={7},
+  pages={e22048},
+  year={2011},
+  publisher={Public Library of Science San Francisco, USA}
+}
+
+@INPROCEEDINGS{Heinerman2015robots,
+  author={Heinerman, Jacqueline and Rango, Massimiliano and Eiben, A.E.},
+  booktitle={2015 IEEE Symposium Series on Computational Intelligence}, 
+  title={Evolution, Individual Learning, and Social Learning in a Swarm of Real Robots}, 
+  year={2015},
+  volume={},
+  number={},
+  pages={1055-1062},
+  doi={10.1109/SSCI.2015.152}}
+
+@article{belmaker2012learning,
+  title={Learning to Choose Among Social Foraging Strategies in Adult House Sparrows (P asser domesticus)},
+  author={Belmaker, Amos and Motro, Uzi and Feldman, Marcus W and Lotem, Arnon},
+  journal={Ethology},
+  volume={118},
+  number={11},
+  pages={1111--1121},
+  year={2012},
+  publisher={Wiley Online Library}
+}
+
 @article {Rodrigo2021gtgr,
 	author = {Rodrigo, Alejandro and {\'A}vila-Chauvet, Laurent and Buritic{\'a}, Jonathan},
 	title = {Daily Patterns of Foraging and Aggressive Behaviors in Great-tailed Grackle (Quiscallus mexicanus) at an Urban Patch with Availability or Absence of Resources},
