--- a/Files/rrs/mi1.Rmd
+++ b/Files/rrs/mi1.Rmd
@@ -70,7 +70,7 @@ Environments where informational cues about resources vary in a heterogenous (bu
 
 &nbsp;
 
-**Social learning spread would decrease the number of inds you have to train & discuss how intersects with flex: observers learn how to solve what they see (or maybe learning to use social info), but not teaching flex, add explanatory variable to soc learn model: condition (control or manipulated) to see if we wrong that they don’t learn flex (horiz and/or vert transmission)**
+If social learning is used by a particular population, it can increase the rate at which individuals learn about the location and presence of resources [e.g., @belmaker2012learning; @Heinerman2015robots; @lihoreau2011local]. If this is the case, then‚ rather than training all individuals in a population to attend to the timing of an available resource, experimenters could train some individuals and then use social learning to spread this information to more individuals in that population. Observers would learn about specific behaviors to engage in rather than being trained in a general cognitive ability, however the more behaviors observers learn, the better they will be able to suceed in changing environments. Additionally, over the course of a flexibility manipulation, observers might learn to pay more attention to social information because the environmental heterogeneity involved in this manipulation would make it useful to continue to attend to social information rather than learning the underlying rules of the experiment.
 
 This investigation asks whether flexibility can be increased by experimentally increasing environmental heterogeneity (via serial reversal learning and/or the regularity of feeder openings), whether such an increase can help species survive in human modified environments, and whether survival information spreads faster through social learning. We explore whether it is even possible to take insights from highly divergent species and apply them to address critical conservation challenges, which pushes the limits in terms of understanding how conserved these abilities may be and to what extent they can be shaped by the environment. We aim to conduct flexibility interventions in two flexible species that are successful in human modified environments (great-tailed grackles and California scrub jays) to understand how flexibility relates to success and whether social learning increases the rate of behavioral change, and implement these interventions in a threatened species (toutouwai) to determine whether flexibility as a generalizable cognitive ability can be trained and whether such training improves survival in human modified environments (Figure 2). The results will substantially advance our understanding of the causes and consequences of flexibility, linking behavior to environmental change, cognition, and success in human modified environments through a comparative and global framework.
 
@@ -107,6 +107,19 @@ This investigation asks whether flexibility can be increased by experimentally i
 ### Great-tailed grackles (*Quiscalus mexicanus*)
 
 **Background:** Great-tailed grackles are flexible [@logan2016flexibilityproblem; @logan2019flexmanip], highly associated with human modified environments [@johnson2001great], and have been rapidly expanding their geographic range across North America over the past 140 years [@wehtje2003range]. They are social and polygamous, and eat a diversity of human foods as well as foraging on insects and on substrates for other natural food items [@johnson2001great]. Males tend to be the socially dominant sex [@johnson2000male] and also the sex that disperses away from their natal area [@sevchik2019dispersal]. We are currently in the middle of long-term data collection on grackles to answer questions about manipulating flexibility using serial reversal learning [@logan2019flexmanip], the predictibility of their space use [@mccune2020spaceuse], and their foraging breadth [@logan2019flexforaging]. In the future, we will conduct additional analyses on this data that are relevant to the current investigation. @Rodrigo2021gtgr found that more grackles are present and more foraging events occur during garbage pick ups when garbage tends to spill out of the bags, thus increasing food availability. Attending to garbage trucks, potentially across space and time, is an example of how flexibility can help individuals meet foraging needs in the context of changing environmental cues.
+
+**Table 1.** Study design for the great-tailed grackle research.
+
+```{r designgtgr, eval=TRUE, warning=FALSE, results='asis', echo=TRUE, include=TRUE}
+d <- read.csv(url("https://raw.githubusercontent.com/ManyIndividuals/ManyIndividuals/main/Files/rrs/mi1studydesignGTGR.csv"), header=F, sep=",", stringsAsFactors=F) 
+
+colnames(d) <- c("Question","Hypothesis","Sampling plan","Analysis plan","Rationale for deciding the sensitivity of the test for confirming or disconfirming the hypothesis","Interpretation given different outcomes","Theory that could be shown wrong by the outcomes")
+
+library(kableExtra)
+knitr::kable(d, booktabs=T, escape=F) %>%
+kable_styling(full_width = T, position = "left")
+linebreak(d, align = c("l"), linebreaker="\n")
+```
 
 **Q1: Do flexibility manipulated individuals differ in their visits to outdoor cafes and garbage dumpsters on regular days (when there is more food availability) than on holidays when they are closed (thus reduced food availability)?**
 
@@ -325,7 +338,8 @@ Model 4: Duration of visits ~ Time (before/after) + (ID)
 
 ### Design 2 - Feeder experiment
 
-The analyses will be conducted using multilevel experience-weighted attraction models that allow one to determine which individual-level learning rules are applied in a particular group [as in @barrett2017pay]. Experimenters will adapt the code from @barrett2017pay (code at: https://github.com/bjbarrett/panama1) to meet their specific experimental design needs.
+The analyses will be conducted using multilevel experience-weighted attraction models that allow one to determine which individual-level learning rules are applied in a particular group [as in @barrett2017pay]. Experimenters will adapt the code from @barrett2017pay (code at: https://github.com/bjbarrett/panama1) to meet their specific experimental design needs. When the experiment has a control condition and a flexibility manipulated condition, this variable must be added to the model to determine whether observers learn only to attend to the particular stimulus in the environment that they observed others attending to, or whether observers learn how to be flexible (i.e., observers of individuals in the manipulated condition perform better than observers of individuals in the control condition). **KELSEY will you check the logic on this last part?**
+
 
 #### Great-tailed grackles
 
